<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UltramanDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/ultraman_image_card"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ultraman_image"
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ultraman_1" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/cardview_light_background"
            android:elevation="50dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/ultraman_image_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/synopsis"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ultraman_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/ultraman_1_synopsis"

                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/profile"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ultraman_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ultraman_1_height"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ultraman_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ultraman_1_weight"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/special_moves"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ultraman_special_move"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ultraman_1_special_move"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_to_fav_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/primaryDarkColor"
                    android:elevation="50dp"
                    android:text="@string/add_to_fav"
                    app:cornerRadius="10dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/back_to_list_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:elevation="50dp"
                    android:text="@string/back_to_list"
                    app:cornerRadius="10dp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>