<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    tools:context=".MainMenuFragment">

    <ImageView
        android:id="@+id/ultraman_main_menu_fragment"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ultraman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />
    
    <com.google.android.material.card.MaterialCardView
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ultraman_main_menu_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/primaryDarkColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/all_ultraman_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondaryColor"
                android:text="@string/all_ultraman"
                android:textColor="@color/textOnSecondary"
                app:cornerRadius="10dp"
                style="button"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/favourite_ultraman_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondaryColor"
                android:text="@string/fav_ultraman"
                android:textColor="@color/textOnSecondary"
                app:cornerRadius="10dp"
                style="button"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/kaiju_list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondaryColor"
                android:text="@string/kaiju_list"
                android:textColor="@color/textOnSecondary"
                app:cornerRadius="10dp"
                style="button"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="109dp" />


</androidx.constraintlayout.widget.ConstraintLayout>